--- a/src/renderer/src/pages/CreateNewPassword.css
+++ b/src/renderer/src/pages/CreateNewPassword.css
@@ -94,3 +94,33 @@ h2 {
     transform: rotate(360deg);
   }
 }
+
+@media (max-width: 1024px) {
+  .container {
+    flex-direction: column-reverse;
+  }
+
+  .right-side {
+    display: none;
+  }
+
+  .left-side {
+    width: 100%;
+    padding: 1.5rem;
+  }
+
+  .input-field-wrapper {
+    width: 90%;
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 480px) {
+  .left-side h2 {
+    font-size: 1.8rem;
+  }
+
+  .reset-button button {
+    padding: 0.75rem;
+  }
+}
